Fixed main aside gap

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -227,7 +227,6 @@ section {
 .main-aside {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
 }
 
 main {
@@ -1073,7 +1072,7 @@ aside .recent-article > div img {
 
     nav .nav-links a.button {
         padding: 0.5rem 2rem;
-        margin: 0.5rem 0 0.5rem 1rem;
+        margin: 0.5rem 1rem 0.5rem 1rem;
     }
     
     nav .nav-links a.button:hover,
@@ -1097,6 +1096,7 @@ aside .recent-article > div img {
 
     .main-aside {
         flex-direction: row;
+        gap: 2rem;
     }
 
     #leistungen .grid {
